--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
           <span id="author">--Steve Jobs</span>
           <div
-            class="btns mt-3 d-flex w-100 justify-content-between align-items-center p-3"
+            class="mt-3 d-flex w-100 flex-wrap gap-2  justify-content-between align-items-center"
           >
             <div>
               <button class="btn btn-outline-primary rounded-5">
@@ -40,7 +40,7 @@
               </button>
             </div>
 
-            <button class="newQuote btn btn-primary rounded-5 p-3">
+            <button class="newQuote btn btn-primary rounded-3">
               New Quote
             </button>
           </div>
